# pytorch

./: .gitignore  .pre-commit-config.yaml  README.md  checks.py  coverage.py  main.py  pyproject.toml
ci/: checks.py  coverage.py  coverage.xml  mypy.ini  pytest.ini
ci/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_main_py.html
src/pytorch/: core.py
src/pytorch/config/: __init__.py  environment.py
tests/: test_environment.py  test_main.py
