[tool.poetry]
name = "pytorch"
version = "0.1.0"
description = "MLA built using PyTorch"
authors = ["Arbi Kullakshi <arbikullakshi0@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [
    { include = "src" },
    { include = "ci" },
    { include = "tests" },
    { include = "main.py" }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
torch = { version = "^2.5.1", extras = ["cpu"] }
torchvision = { version = "^0.20.1", extras = ["cpu"] }
torchaudio = { version = "^2.5.1", extras = ["cpu"] }

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pyright = "^1.1.389"
coverage = "^7.6.7"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "^(?!tests/|src/|main.py).*"

[tool.isort]
profile = "black"

[tool.mypy]
config_file = "ci/mypy.ini"
files = "main.py, src, tests"
exclude = "^(?!tests/|src/|main.py).*"

[tool.pyright]
exclude = ["^(?!tests/|src/|main.py).*"]

[tool.coverage.run]
source = ["src", "main.py"]
omit = ["tests/*", "ci/*"]
relative_files = true
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.coverage.html]
directory = "ci/htmlcov"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.scripts]
pytorch = "main:main"
lint = "ci.checks:run_lint"
coverage = "ci.coverage:generate_coverage_report"
